courses/430_programming-languages/assignment-8/tests/error/error53.nex
deleigh raspetchatat 1; poka (falshiviy);
